# DetachedLightning

./: .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
Docs/: 0001-0104.mkv  demonstration.webm
cmake/: Plugin.h.in  version.rc.in
contrib/Distribution/fomod/: info.xml
include/: Config.h  Hooks.h
src/: Config.cpp  Hooks.cpp  Main.cpp  PCH.h
